--- a/src/Components/UserData/UserData.css
+++ b/src/Components/UserData/UserData.css
@@ -2,6 +2,12 @@
     border: 1px solid #ccc;
     padding: 25px 15px;
 }
-.UserData .form-control{
-    margin: 0 0 15px 0;
+.UserData .form-control input{
+    width: 300px;    
+}
+.UserData .form-control select{
+    width: 280px;    
+}
+.UserData .form-control button{
+    width: 325px;    
 }
